Adds Alexander Koreapnov email

--- a/git_exercise/index.html
+++ b/git_exercise/index.html
@@ -9,5 +9,6 @@
   <li>a.stryhunov@studytube.nl</li>
   <li>a.filatov@studytube.nl</li>
   <li>m.panasenko@studytube.nl</li>
+  <li>a.korepanov@studytube.nl</li>
 </ul>
 
