adding-email-of-daniil-rybalka

--- a/git_exercise/index.html
+++ b/git_exercise/index.html
@@ -12,5 +12,6 @@
   <li>a.korepanov@studytube.nl</li>
   <li>v.zhuravlov@studytube.nl</li>
   <li>i.maslov@studytube.nl</li>
+  <li>d.rybalka@studytube.nl</li>
 </ul>
 
