--- a/git_exercise/index.html
+++ b/git_exercise/index.html
@@ -11,5 +11,6 @@
   <li>m.panasenko@studytube.nl</li>
   <li>a.korepanov@studytube.nl</li>
   <li>v.zhuravlov@studytube.nl</li>
+  <li>i.maslov@studytube.nl</li>
 </ul>
 
