Adds astryhunov email to index

--- a/git_exercise/index.html
+++ b/git_exercise/index.html
@@ -6,5 +6,6 @@
   <li>mykytenkovladislav@gmail.com</li>
   <li>v.vykhodtsev@studytube.nl</li>
   <li>a.matiunin@studytube.nl</li>
+  <li>a.stryhunov@studytube.nl</li>
 </ul>
 
