Mariia Panasenko email has been added

--- a/git_exercise/index.html
+++ b/git_exercise/index.html
@@ -8,5 +8,6 @@
   <li>a.matiunin@studytube.nl</li>
   <li>a.stryhunov@studytube.nl</li>
   <li>a.filatov@studytube.nl</li>
+  <li>m.panasenko@studytube.nl</li>
 </ul>
 
