--- a/git_exercise/index.html
+++ b/git_exercise/index.html
@@ -5,5 +5,6 @@
   <li>vlad.udod@studytube.nl</li>
   <li>mykytenkovladislav@gmail.com</li>
   <li>v.vykhodtsev@studytube.nl</li>
+  <li>a.matiunin@studytube.nl</li>
 </ul>
 
