add-email-Filatov

--- a/git_exercise/index.html
+++ b/git_exercise/index.html
@@ -7,5 +7,6 @@
   <li>v.vykhodtsev@studytube.nl</li>
   <li>a.matiunin@studytube.nl</li>
   <li>a.stryhunov@studytube.nl</li>
+  <li>a.filatov@studytube.nl</li>
 </ul>
 
