Add Vladyslav Zhuravlov email

--- a/git_exercise/index.html
+++ b/git_exercise/index.html
@@ -10,5 +10,6 @@
   <li>a.filatov@studytube.nl</li>
   <li>m.panasenko@studytube.nl</li>
   <li>a.korepanov@studytube.nl</li>
+  <li>v.zhuravlov@studytube.nl</li>
 </ul>
 
