adds Kirill Petrov email

--- a/git_exercise/index.html
+++ b/git_exercise/index.html
@@ -13,5 +13,6 @@
   <li>v.zhuravlov@studytube.nl</li>
   <li>i.maslov@studytube.nl</li>
   <li>d.rybalka@studytube.nl</li>
+  <li>k.petrov@studytube.nl</li>
 </ul>
 
